--- a/Code/Front_End/Pages/ManageDegrees.cshtml
+++ b/Code/Front_End/Pages/ManageDegrees.cshtml
@@ -53,7 +53,7 @@
 </div>
 
 <div class="Flex CenterFlex">
-    <div class="Block Padded">
+    <div class="Block Padded" id="RequirementContainer">
         <div class="Title">Current Degree: BS - Computer Science - 2017-2018</div>
         <div class="Flex CenterFlex Row" style="margin-bottom: 10px;">
             <div class="Element ButtonElement">[X]</div>
@@ -90,7 +90,9 @@
                 <a href="#">[+]</a>
             </div>
         </div>
-        <input type="submit" value="Save Changes" class="BigButton" />
     </div>
-    
+    <div style="width: 100%; text-align: center;">
+        <button type="button" class="BigButton" style="width: 150px; margin-top: 5px;" id="AddNewRequirementButton">Add New Requirement</button>
+        <input type="submit" value="Save Changes" class="BigButton" style="width: 150px; margin-top: 5px;" />
+    </div>
 </div>
