--- a/Code/Front_End/Pages/_Layout.cshtml
+++ b/Code/Front_End/Pages/_Layout.cshtml
@@ -10,10 +10,21 @@
     <script src="~/js/jquery.js"></script>
 </head>
 <body>
-    <div id="PageContainer" class="Border">
-        <div class="PageRow">
-            <div id="TopLogo" class="Border">CWU Student Advising</div>
-        </div>
+<div id="TopSpacer">
+    
+        <div id="CwuHome">
+            <a href="http://www.cwu.edu" style="color: #000000;">CENTRAL WASHINGTON UNIVERSITY</a>
+</div>
+    
+</div>
+<div id="TopLogo">
+    <div id="InnerTopLogo">
+        CWU Student Advising
+    </div>
+</div>
+<div class="HorizontalBar">&nbsp;</div>
+    <div id="PageContainer">
+        
 
         <div class="PageRow Flex">
             <div class="WideFlex" id="Logout">Logged in as: <span id="CurrentUser">Admin</span> <a href="">[ Logout ]</a></div>
