Added a dummy controller for the midterm presentation, and updated the base case.

--- a/Code/Front_End/Pages/_Layout.cshtml
+++ b/Code/Front_End/Pages/_Layout.cshtml
@@ -19,7 +19,7 @@
 </div>
 <div id="TopLogo">
     <div id="InnerTopLogo">
-        CWU Student Advising
+        <a href="Index" style="color: white;">CWU Student Advising</a>
     </div>
 </div>
 <div class="HorizontalBar">&nbsp;</div>
@@ -30,7 +30,8 @@
             <div class="WideFlex" id="Logout">Logged in as: <span id="CurrentUser">Admin</span> <a href="">[ Logout ]</a></div>
             <div class="WideFlex" id="Navigation">
                 <span id="NavLinks">
-                    <a href="Index">Advising</a> |
+                    <a href="Index">Home</a> |
+                    <a href="Advising">Advising</a> |
                     <a href="ManageCourses">Course Management</a> |
                     <a href="ManageDegrees">Degree Management</a>
                 </span>
