--- a/Code/Front_End/Pages/Index.cshtml
+++ b/Code/Front_End/Pages/Index.cshtml
@@ -11,11 +11,11 @@
             <div class="Flex CenterFlex">
                 <div class="Flex ">
                     <div class="LabelLeft">Student Name:</div>
-                    <div class="LabelRight"><input type="text" /></div>
+                    <div class="LabelRight"><input type="text" asp-for="Index.Name"/></div>
                 </div>
                 <div class="Flex">
                     <div class="LabelLeft">Student ID:</div>
-                    <div class="LabelRight"><input type="text" /></div>
+                    <div class="LabelRight"><input type="text" asp-for="Index.ID"/></div>
                 </div>
             </div>
 
@@ -23,23 +23,15 @@
                 <div class="Flex">
                     <div class="LabelLeft Border">Starting Quarter:</div>
                     <div class="LabelRight Flex">
-                        <select name="Quarter" style="width: 50%; margin-right: 5px;">
-                            <option>Fall</option>
-                            <option>Winter</option>
-                            <option>Spring</option>
-                        </select>
-                        <input type="number" value="2017" style="width: 48%;" min="2014" max="2022" />
+                        <select asp-for="Index.Quarter"  style="width: 50%; margin-right: 5px;" asp-items="DemoController.GetQuarters()"></select>
+                        <input asp-for="Index.Year" type="number" value="2017" style="width: 48%;" min="2014" max="2022" />
                     </div>
                 </div>
 
                 <div class="Flex">
                     <div class="LabelLeft">Degree:</div>
                     <div class="LabelRight">
-                        <select name="Degrees">
-                            <option>--------</option>
-                            <option>BS - Computer Science</option>
-                            <option>BS - Information Technology</option>
-                        </select>
+                        <select asp-for="Index.Degree" asp-items="DemoController.GetDegrees()"></select>
                     </div>
                 </div>
             </div>
@@ -49,120 +41,3 @@
     </div>
 </form>
 
-<div class="PageRow CenterFlex ">
-    <div class="PageRow Flex">
-        <div class="Quarter Border">
-            <div class="Title">Fall 17</div>
-            <div class="Flex MiddleFlex">
-                <select class="CourseSelection WideFlex">
-                    <option value="cs480">CS 480 (4cr)</option>
-                    <option value="cs427">CS 427 (4cr)</option>
-                    <option value="cs361">CS 361 (4cr)</option>
-                    <option value="csElective">CS Elective (4cr)</option>
-                </select>
-                <a href="#" class="DeleteCourse WideFlex ">X</a>
-            </div>
-            <div class="Flex MiddleFlex">
-                <select class="CourseSelection WideFlex">
-                    <option value="cs480">CS 480 (4cr)</option>
-                    <option value="cs427">CS 427 (4cr)</option>
-                    <option value="cs361">CS 361 (4cr)</option>
-                    <option value="csElective">CS Elective (4cr)</option>
-                </select>
-                <a href="#" class="DeleteCourse WideFlex ">X</a>
-            </div>
-            <div class="Flex MiddleFlex">
-                <select class="CourseSelection WideFlex">
-                    <option value="cs480">CS 480 (4cr)</option>
-                    <option value="cs427">CS 427 (4cr)</option>
-                    <option value="cs361">CS 361 (4cr)</option>
-                    <option value="csElective">CS Elective (4cr)</option>
-                </select>
-                <a href="#" class="DeleteCourse WideFlex ">X</a>
-            </div>
-            <div style="text-align: right;">Total Credits: 15</div>
-        </div>
-
-        <div class="Quarter Border">
-            <div class="Title">Winter 18</div>
-            <div class="Flex MiddleFlex">
-                <select class="CourseSelection WideFlex">
-                    <option value="cs480">CS 480 (4cr)</option>
-                    <option value="cs427">CS 427 (4cr)</option>
-                    <option value="cs361">CS 361 (4cr)</option>
-                    <option value="csElective">CS Elective (4cr)</option>
-                </select>
-                <a href="#" class="DeleteCourse WideFlex ">X</a>
-            </div>
-            <div class="Flex MiddleFlex">
-                <select class="CourseSelection WideFlex">
-                    <option value="cs480">CS 480 (4cr)</option>
-                    <option value="cs427">CS 427 (4cr)</option>
-                    <option value="cs361">CS 361 (4cr)</option>
-                    <option value="csElective">CS Elective (4cr)</option>
-                </select>
-                <a href="#" class="DeleteCourse WideFlex ">X</a>
-            </div>
-            <div class="Flex MiddleFlex">
-                <select class="CourseSelection WideFlex">
-                    <option value="cs480">CS 480 (4cr)</option>
-                    <option value="cs427">CS 427 (4cr)</option>
-                    <option value="cs361">CS 361 (4cr)</option>
-                    <option value="csElective">CS Elective (4cr)</option>
-                </select>
-                <a href="#" class="DeleteCourse WideFlex ">X</a>
-            </div>
-            <div style="text-align: right;">Total Credits: 15</div>
-        </div>
-
-        <div class="Quarter Border">
-            <div class="Title">Spring 18</div>
-            <div class="Flex MiddleFlex">
-                <select class="CourseSelection WideFlex">
-                    <option value="cs480">CS 480 (4cr)</option>
-                    <option value="cs427">CS 427 (4cr)</option>
-                    <option value="cs361">CS 361 (4cr)</option>
-                    <option value="csElective">CS Elective (4cr)</option>
-                </select>
-                <a href="#" class="DeleteCourse WideFlex ">X</a>
-            </div>
-            <div class="Flex MiddleFlex">
-                <select class="CourseSelection WideFlex">
-                    <option value="cs480">CS 480 (4cr)</option>
-                    <option value="cs427">CS 427 (4cr)</option>
-                    <option value="cs361">CS 361 (4cr)</option>
-                    <option value="csElective">CS Elective (4cr)</option>
-                </select>
-                <a href="#" class="DeleteCourse WideFlex ">X</a>
-            </div>
-            <div class="Flex MiddleFlex">
-                <select class="CourseSelection WideFlex">
-                    <option value="cs480">CS 480 (4cr)</option>
-                    <option value="cs427">CS 427 (4cr)</option>
-                    <option value="cs361">CS 361 (4cr)</option>
-                    <option value="csElective">CS Elective (4cr)</option>
-                </select>
-                <a href="#" class="DeleteCourse WideFlex ">X</a>
-            </div>
-            <div style="text-align: right;">Total Credits: 15</div>
-        </div>
-    </div>
-</div>
-
-
-<div class="CenterFlex">
-    <div class="Block">
-        <div class="Title">Incomplete Graduation Requirements:</div>
-
-        <ul>
-            <li>Operating Systems: CS470</li>
-            <li>CS Elective: CS370, CS445</li>
-        </ul>
-    </div>
-</div>
-
-<div class="Flex CenterFlex">
-    <a href="#" class="DivButton">Add Additional Quarter</a>
-    <a href="#" class="DivButton">Generate Remaining Courses</a>
-    <a href="#" class="DivButton">Print</a>
-</div>
