Finished jquery for demo.

--- a/Code/Front_End/Pages/ManageCourses.cshtml
+++ b/Code/Front_End/Pages/ManageCourses.cshtml
@@ -115,7 +115,7 @@
     </div>
 </div>
 
-<div class="Flex CenterFlex">
+<div class="Flex CenterFlex"  style="min-width: 1000px;">
     <div class="Block Padded" id="CourseContainer">
         <div class="Title">Courses</div>
         <div class="Flex CenterFlex Row" style="margin-bottom: 10px;">
