--- a/Code/Front_End/Pages/ManageDegrees.cshtml
+++ b/Code/Front_End/Pages/ManageDegrees.cshtml
@@ -53,7 +53,7 @@
 </div>
 
 <div class="Flex CenterFlex">
-    <div class="Block Padded" id="RequirementContainer">
+    <div class="Block Padded" id="RequirementContainer"  style="min-width: 800px;">
         <div class="Title">Current Degree: BS - Computer Science - 2017-2018</div>
         <div class="Flex CenterFlex Row" style="margin-bottom: 10px;">
             <div class="Element ButtonElement">[X]</div>
