Implemented basic JSON wrapping for advising, and fixed bugs with dynamic JQuery elements.

--- a/Code/Front_End/Pages/Advising.cshtml
+++ b/Code/Front_End/Pages/Advising.cshtml
@@ -20,7 +20,7 @@
     <div class="PageRow CenterFlex ">
         <div class="Quarter Border">
             <div class="Title">Fall 17</div>
-            <div class="Flex MiddleFlex"><select class="CourseSelection WideFlex"><option>UNIV 101</option><option>ENG 102</option></select><span class="DeleteCourse WideFlex ">X</span></div>
+            <div class="Flex MiddleFlex"><select class="CourseSelection WideFlex"><option>UNIV 101</option></select><span class="DeleteCourse WideFlex ">X</span></div>
             <div class="Flex MiddleFlex"><select class="CourseSelection WideFlex"><option>MATH 153</option></select><span class="DeleteCourse WideFlex ">X</span></div>
             <div class="Flex MiddleFlex"><select class="CourseSelection WideFlex"><option>ENG 101</option></select><span class="DeleteCourse WideFlex ">X</span></div>
             <div class="Flex MiddleFlex"><select class="CourseSelection WideFlex"><option>CS 112</option></select><span class="DeleteCourse WideFlex ">X</span></div>
@@ -138,6 +138,6 @@
 
 <div class="Flex CenterFlex">
     <a href="#" class="DivButton">Add Additional Quarter</a>
-    <a href="#" class="DivButton">Generate Remaining Courses</a>
+    <a href="#" class="DivButton" id="GenerateButton">Generate Remaining Courses</a>
     <a href="#" class="DivButton">Print</a>
 </div>
