Added credits functionality to advising page. Started functionality for quarterly offerings. Temporarily broke displaying quarters by year so that quarters can be dynamically added and removed.

--- a/Code/Front_End/wwwroot/css/Layout.css
+++ b/Code/Front_End/wwwroot/css/Layout.css
@@ -63,6 +63,8 @@
 .PageRow {
     padding: 10px;
     margin: 10px;
+    max-width: 80%;
+    flex-wrap: wrap;
 }
 
 .Flex {
@@ -110,7 +112,8 @@
 }
 
 .Quarter {
-    width: 200px;
+    min-width: 200px;
+    margin-bottom: 20px;
     margin-left: 10px;
     margin-right: 10px;
 }
