Started JS for adding/removing prereqs in course management

--- a/Code/Front_End/Pages/Advising.cshtml
+++ b/Code/Front_End/Pages/Advising.cshtml
@@ -18,132 +18,7 @@
 
 <div class="CenterFlex">
     <div id="QuarterContainer" class="CenterFlex">
-        <!--
-        <div class="Quarter Border" quarterId="3" locked="true">
-            <div class="Flex MiddleFlex"><div class="LockQuarter">&#128274;</div><div class="Title WideFlex">Summer 17</div><div class="DeleteQuarter">&#10060;</div></div>
-            <div class="Flex MiddleFlex"><span class="AddCourse WideFlex">+</span></div>
-        </div>
-
-        <div class="Quarter Border" quarterId="4" locked="false">
-            <div class="Flex MiddleFlex"><div class="LockQuarter">&#128275;</div><div class="Title WideFlex">Fall 17</div><div class="DeleteQuarter">&#10060;</div></div>
-            <div class="Flex MiddleFlex"><select class="CourseSelection WideFlex"><option value="UNIV 101" credits="1" offered="124">UNIV 101</option></select><span class="DeleteCourse WideFlex ">X</span></div>
-            <div class="Flex MiddleFlex"><select class="CourseSelection WideFlex"><option value="MATH 153" credits="5" offered="124">MATH 153</option></select><span class="DeleteCourse WideFlex ">X</span></div>
-            <div class="Flex MiddleFlex"><select class="CourseSelection WideFlex"><option value="ENG 101" credits="5" offered="124">ENG 101</option></select><span class="DeleteCourse WideFlex ">X</span></div>
-            <div class="Flex MiddleFlex"><select class="CourseSelection WideFlex"><option value="CS 112" credits="4" offered="124">CS 112</option></select><span class="DeleteCourse WideFlex ">X</span></div>
-            <div class="Flex MiddleFlex"><span class="AddCourse WideFlex">+</span></div>
-        </div>
-
-        <div class="Quarter Border" quarterId="1" locked="false">
-            <div class="Flex MiddleFlex"><div class="LockQuarter">&#128275;</div><div class="Title WideFlex">Winter 18</div><div class="DeleteQuarter">&#10060;</div></div>
-            <div class="Flex MiddleFlex"><select class="CourseSelection WideFlex"><option value="MATH 154" credits="5" offered="124">MATH 154</option></select><span class="DeleteCourse WideFlex ">X</span></div>
-            <div class="Flex MiddleFlex"><select class="CourseSelection WideFlex"><option value="CS 110" credits="4" offered="124">CS 110</option></select><span class="DeleteCourse WideFlex ">X</span></div>
-            <div class="Flex MiddleFlex"><select class="CourseSelection WideFlex"><option value="ENG 102" credits="5" offered="124">ENG 102</option></select><span class="DeleteCourse WideFlex ">X</span></div>
-            <div class="Flex MiddleFlex"><select class="CourseSelection WideFlex"><option value="COMPUTING" credits="5" offered="124">COMPUTING</option></select><span class="DeleteCourse WideFlex ">X</span></div>
-            <div class="Flex MiddleFlex"><span class="AddCourse WideFlex">+</span></div>
-        </div>
-
-        <div class="Quarter Border" quarterId="2" locked="false">
-            <div class="Flex MiddleFlex"><div class="LockQuarter">&#128275;</div><div class="Title WideFlex">Spring 18</div><div class="DeleteQuarter">&#10060;</div></div>
-            <div class="Flex MiddleFlex"><select class="CourseSelection WideFlex"><option value="MATH 172" credits="5" offered="124">MATH 172</option></select><span class="DeleteCourse WideFlex ">X</span></div>
-            <div class="Flex MiddleFlex"><select class="CourseSelection WideFlex"><option value="CS 111" credits="4" offered="124">CS 111</option></select><span class="DeleteCourse WideFlex ">X</span></div>
-            <div class="Flex MiddleFlex"><select class="CourseSelection WideFlex"><option value="BREADTH 1" credits="5" offered="124">BREADTH 1</option></select><span class="DeleteCourse WideFlex ">X</span></div>
-            <div class="Flex MiddleFlex"><span class="AddCourse WideFlex">+</span></div>
-        </div>
-
-        <div class="Quarter Border" quarterId="3" locked="true">
-            <div class="Flex MiddleFlex"><div class="LockQuarter">&#128275;</div><div class="Title WideFlex">Summer 17</div><div class="DeleteQuarter">&#10060;</div></div>
-            <div class="Flex MiddleFlex"><span class="AddCourse WideFlex">+</span></div>
-        </div>
-
-        <div class="Quarter Border" quarterId="4" locked="false">
-            <div class="Flex MiddleFlex"><div class="LockQuarter">&#128275;</div><div class="Title WideFlex">Fall 18</div><div class="DeleteQuarter">&#10060;</div></div>
-            <div class="Flex MiddleFlex"><select class="CourseSelection WideFlex"><option value="CS 301" credits="4" offered="124">CS 301</option></select><span class="DeleteCourse WideFlex ">X</span></div>
-            <div class="Flex MiddleFlex"><select class="CourseSelection WideFlex"><option value="CS 311" credits="4" offered="124">CS 311</option></select><span class="DeleteCourse WideFlex ">X</span></div>
-            <div class="Flex MiddleFlex"><select class="CourseSelection WideFlex"><option value="BREADTH 2" credits="5" offered="124">BREADTH 2</option></select><span class="DeleteCourse WideFlex ">X</span></div>
-            <div class="Flex MiddleFlex"><select class="CourseSelection WideFlex"><option value="BREADTH 3" credits="5" offered="124">BREADTH 3</option></select><span class="DeleteCourse WideFlex ">X</span></div>
-            <div class="Flex MiddleFlex"><span class="AddCourse WideFlex">+</span></div>
-        </div>
-
-        <div class="Quarter Border" quarterId="1" locked="false">
-            <div class="Flex MiddleFlex"><div class="LockQuarter">&#128275;</div><div class="Title WideFlex">Winter 19</div><div class="DeleteQuarter">&#10060;</div></div>
-            <div class="Flex MiddleFlex"><select class="CourseSelection WideFlex"><option value="CS 302" credits="4" offered="124">CS 302</option></select><span class="DeleteCourse WideFlex ">X</span></div>
-            <div class="Flex MiddleFlex"><select class="CourseSelection WideFlex"><option value="CS 312" credits="4" offered="124">CS 312</option></select><span class="DeleteCourse WideFlex ">X</span></div>
-            <div class="Flex MiddleFlex"><select class="CourseSelection WideFlex"><option value="CS 325" credits="3" offered="124">CS 325</option></select><span class="DeleteCourse WideFlex ">X</span></div>
-            <div class="Flex MiddleFlex"><select class="CourseSelection WideFlex"><option value="BREADTH 4" credits="5" offered="124">BREADTH 4</option></select><span class="DeleteCourse WideFlex ">X</span></div>
-            <div class="Flex MiddleFlex"><span class="AddCourse WideFlex">+</span></div>
-        </div>
-
-        <div class="Quarter Border" quarterId="2" locked="false">
-            <div class="Flex MiddleFlex"><div class="LockQuarter">&#128275;</div><div class="Title WideFlex">Spring 19</div><div class="DeleteQuarter">&#10060;</div></div>
-            <div class="Flex MiddleFlex"><select class="CourseSelection WideFlex"><option value="MATH 260" credits="5" offered="124">MATH 260</option></select><span class="DeleteCourse WideFlex ">X</span></div>
-            <div class="Flex MiddleFlex"><select class="CourseSelection WideFlex"><option value="CS 446" credits="4" offered="124">CS 446</option></select><span class="DeleteCourse WideFlex ">X</span></div>
-            <div class="Flex MiddleFlex"><select class="CourseSelection WideFlex"><option value="BREADTH 5" credits="5" offered="124">BREADTH 5</option></select><span class="DeleteCourse WideFlex ">X</span></div>
-            <div class="Flex MiddleFlex"><span class="AddCourse WideFlex">+</span></div>
-        </div>
-
-        <div class="Quarter Border" quarterId="3" locked="true">
-            <div class="Flex MiddleFlex"><div class="LockQuarter">&#128275;</div><div class="Title WideFlex">Summer 17</div><div class="DeleteQuarter">&#10060;</div></div>
-            <div class="Flex MiddleFlex"><span class="AddCourse WideFlex">+</span></div>
-        </div>
-
-        <div class="Quarter Border" quarterId="4" locked="false">
-            <div class="Flex MiddleFlex"><div class="LockQuarter">&#128275;</div><div class="Title WideFlex">Fall 19</div><div class="DeleteQuarter">&#10060;</div></div>
-            <div class="Flex MiddleFlex"><select class="CourseSelection WideFlex"><option value="CS 361" credits="4" offered="124">CS 361</option></select><span class="DeleteCourse WideFlex ">X</span></div>
-            <div class="Flex MiddleFlex"><select class="CourseSelection WideFlex"><option value="MATH 330" credits="5" offered="124">MATH 330</option></select><span class="DeleteCourse WideFlex ">X</span></div>
-            <div class="Flex MiddleFlex"><select class="CourseSelection WideFlex"><option value="BREADTH 6" credits="5" offered="124">BREADTH 6</option></select><span class="DeleteCourse WideFlex ">X</span></div>
-            <div class="Flex MiddleFlex"><span class="AddCourse WideFlex">+</span></div>
-        </div>
-
-        <div class="Quarter Border" quarterId="1" locked="false">
-            <div class="Flex MiddleFlex"><div class="LockQuarter">&#128275;</div><div class="Title WideFlex">Winter 20</div><div class="DeleteQuarter">&#10060;</div></div>
-            <div class="Flex MiddleFlex"><select class="CourseSelection WideFlex"><option value="CS 362" credits="4" offered="124">CS 362</option></select><span class="DeleteCourse WideFlex ">X</span></div>
-            <div class="Flex MiddleFlex"><select class="CourseSelection WideFlex"><option value="CS 470" credits="4" offered="124">CS 470</option></select><span class="DeleteCourse WideFlex ">X</span></div>
-            <div class="Flex MiddleFlex"><select class="CourseSelection WideFlex"><option value="CS ELECTIVE 1" credits="4" offered="124">CS ELECTIVE 1</option></select><span class="DeleteCourse WideFlex ">X</span></div>
-            <div class="Flex MiddleFlex"><span class="AddCourse WideFlex">+</span></div>
-        </div>
-
-        <div class="Quarter Border" quarterId="2" locked="false">
-            <div class="Flex MiddleFlex"><div class="LockQuarter">&#128275;</div><div class="Title WideFlex">Spring 20</div><div class="DeleteQuarter">&#10060;</div></div>
-            <div class="Flex MiddleFlex"><select class="CourseSelection WideFlex"><option value="CS 380" credits="4" offered="124">CS 380</option></select><span class="DeleteCourse WideFlex ">X</span></div>
-            <div class="Flex MiddleFlex"><select class="CourseSelection WideFlex"><option value="CS 420" credits="4" offered="124">CS 420</option></select><span class="DeleteCourse WideFlex ">X</span></div>
-            <div class="Flex MiddleFlex"><select class="CourseSelection WideFlex"><option value="CS ELECTIVE 2" credits="4" offered="124">CS ELECTIVE 2</option></select><span class="DeleteCourse WideFlex ">X</span></div>
-            <div class="Flex MiddleFlex"><select class="CourseSelection WideFlex"><option value="BREADTH 7" credits="5" offered="124">BREADTH 7</option></select><span class="DeleteCourse WideFlex ">X</span></div>
-            <div class="Flex MiddleFlex"><span class="AddCourse WideFlex">+</span></div>
-        </div>
-
-        <div class="Quarter Border" quarterId="3" locked="true">
-            <div class="Flex MiddleFlex"><div class="LockQuarter">&#128275;</div><div class="Title WideFlex">Summer 17</div><div class="DeleteQuarter">&#10060;</div></div>
-            <div class="Flex MiddleFlex"><span class="AddCourse WideFlex">+</span></div>
-        </div>
-
-        <div class="Quarter Border" quarterId="4" locked="false">
-            <div class="Flex MiddleFlex"><div class="LockQuarter">&#128275;</div><div class="Title WideFlex">Fall 20</div><div class="DeleteQuarter">&#10060;</div></div>
-            <div class="Flex MiddleFlex"><select class="CourseSelection WideFlex"><option value="CS 480" credits="4" offered="124">CS 480</option></select><span class="DeleteCourse WideFlex ">X</span></div>
-            <div class="Flex MiddleFlex"><select class="CourseSelection WideFlex"><option value="CS 427" credits="4" offered="124">CS 427</option></select><span class="DeleteCourse WideFlex ">X</span></div>
-            <div class="Flex MiddleFlex"><select class="CourseSelection WideFlex"><option value="UNIV ELECTIVE 1" credits="5" offered="124">UNIV ELECTIVE 1</option></select><span class="DeleteCourse WideFlex ">X</span></div>
-            <div class="Flex MiddleFlex"><select class="CourseSelection WideFlex"><option value="CS 392" credits="1" offered="124">CS 392</option></select><span class="DeleteCourse WideFlex ">X</span></div>
-            <div class="Flex MiddleFlex"><span class="AddCourse WideFlex">+</span></div>
-        </div>
-
-        <div class="Quarter Border" quarterId="1" locked="false">
-            <div class="Flex MiddleFlex"><div class="LockQuarter">&#128275;</div><div class="Title WideFlex">Winter 21</div><div class="DeleteQuarter">&#10060;</div></div>
-            <div class="Flex MiddleFlex"><select class="CourseSelection WideFlex"><option value="CS 481" credits="4" offered="124">CS 481</option></select><span class="DeleteCourse WideFlex ">X</span></div>
-            <div class="Flex MiddleFlex"><select class="CourseSelection WideFlex"><option value="BREADTH 8" credits="5" offered="124">BREADTH 8</option></select><span class="DeleteCourse WideFlex ">X</span></div>
-            <div class="Flex MiddleFlex"><select class="CourseSelection WideFlex"><option value="CS ELECTIVE 3" credits="4" offered="124">CS ELECTIVE 3</option></select><span class="DeleteCourse WideFlex ">X</span></div>
-            <div class="Flex MiddleFlex"><select class="CourseSelection WideFlex"><option value="UNIV ELECTIVE 2" credits="5" offered="124">UNIV ELECTIVE 2</option></select><span class="DeleteCourse WideFlex ">X</span></div>
-            <div class="Flex MiddleFlex"><span class="AddCourse WideFlex">+</span></div>
-        </div>
-
-        <div class="Quarter Border" quarterId="2" locked="false">
-            <div class="Flex MiddleFlex"><div class="LockQuarter">&#128275;</div><div class="Title WideFlex">Spring 21</div><div class="DeleteQuarter">&#10060;</div></div>
-            <div class="Flex MiddleFlex"><select class="CourseSelection WideFlex"><option value="CS 489" credits="1" offered="124">CS 489</option></select><span class="DeleteCourse WideFlex ">X</span></div>
-            <div class="Flex MiddleFlex"><select class="CourseSelection WideFlex"><option value="CS 492" credits="2" offered="124">CS 492</option></select><span class="DeleteCourse WideFlex ">X</span></div>
-            <div class="Flex MiddleFlex"><select class="CourseSelection WideFlex"><option value="BREADTH 9" credits="5" offered="124">BREADTH 9</option></select><span class="DeleteCourse WideFlex ">X</span></div>
-            <div class="Flex MiddleFlex"><select class="CourseSelection WideFlex"><option value="CS ELECTIVE 4" credits="4" offered="124">CS ELECTIVE 4</option></select><span class="DeleteCourse WideFlex ">X</span></div>
-            <div class="Flex MiddleFlex"><select class="CourseSelection WideFlex"><option value="CS ELECTIVE 5" credits="4" offered="124">CS ELECTIVE 5</option></select><span class="DeleteCourse WideFlex ">X</span></div>
-            <div class="Flex MiddleFlex"><span class="AddCourse WideFlex">+</span></div>
-        </div>
-        -->
+        &nbsp;
     </div>
 </div>
 <div class="CenterFlex">
