--- a/Code/Front_End/Pages/_Layout.cshtml
+++ b/Code/Front_End/Pages/_Layout.cshtml
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="~/css/Layout.css" />
     <link rel="stylesheet" href="~/css/Generics.css" />
+    <script src="~/js/site.js"></script>
     <script src="~/js/jquery.js"></script>
 </head>
 <body>
