--- a/Code/Front_End/wwwroot/css/Layout.css
+++ b/Code/Front_End/wwwroot/css/Layout.css
@@ -213,3 +213,26 @@
     cursor: pointer;
     opacity: 1.0;
 }
+
+.PrereqPopup {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.5);
+    -webkit-filter: blur(5px);
+    -moz-filter: blur(5px);
+    -ms-filter: blur(5px);
+    filter: blur(5px);
+    overflow-y: scroll;
+}
+
+.PrereqPopubBox {
+    position: fixed;
+    width: 40%;
+    height: 30%;
+    left: 30%;
+    top: 35%;
+    background-color: #ffffff;
+}
