--- a/Code/output/netcoreapp2.0/debian-x64/publish/Pages/_Layout.cshtml
+++ b/Code/output/netcoreapp2.0/debian-x64/publish/Pages/_Layout.cshtml
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="~/css/Layout.css" />
     <link rel="stylesheet" href="~/css/Generics.css" />
+    <script src="~/js/site.js"></script>
     <script src="~/js/jquery.js"></script>
 </head>
 <body>
