--- a/Code/output/netcoreapp2.0/debian-x64/publish/wwwroot/css/Layout.css
+++ b/Code/output/netcoreapp2.0/debian-x64/publish/wwwroot/css/Layout.css
@@ -63,6 +63,8 @@
 .PageRow {
     padding: 10px;
     margin: 10px;
+    max-width: 80%;
+    flex-wrap: wrap;
 }
 
 .Flex {
@@ -109,8 +111,15 @@
     vertical-align: middle;
 }
 
+#QuarterContainer {
+    max-width: 1000px;
+    flex-wrap: wrap;
+}
+
 .Quarter {
-    width: 200px;
+    min-width: 200px;
+    max-width: 200px;
+    margin-bottom: 20px;
     margin-left: 10px;
     margin-right: 10px;
 }
@@ -194,4 +203,36 @@
 
 .CourseNumberInput {
     width: 50px;
+}
+
+.DeleteQuarter {
+    cursor: pointer;
+}
+
+.LockQuarter {
+    cursor: pointer;
+    opacity: 1.0;
+}
+
+.PrereqPopup {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.5);
+    -webkit-filter: blur(5px);
+    -moz-filter: blur(5px);
+    -ms-filter: blur(5px);
+    filter: blur(5px);
+    overflow-y: scroll;
+}
+
+.PrereqPopubBox {
+    position: fixed;
+    width: 40%;
+    height: 30%;
+    left: 30%;
+    top: 35%;
+    background-color: #ffffff;
 }
